# simple_vpn

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
simple_vpn/: .env
simple_vpn/apps/core/: apps.py  urls.py  utils.py  views.py
simple_vpn/apps/core/server/: __init__.py  server.py  utils.py
simple_vpn/apps/core/templates/core/: base.html  index.html
simple_vpn/apps/users/: forms.py  models.py  urls.py  views.py
simple_vpn/apps/users/migrations/: 0001_initial.py  0002_remove_site_name_slug_alter_site_name.py
simple_vpn/apps/users/templates/users/: account.html  account_save.html  base.html  create_site.html  delete_site_confirm.html  login.html  registration.html  settings.html  statistics.html
simple_vpn/common_utils/: url_utils.py
simple_vpn/config/: asgi.py  settings.py  urls.py  wsgi.py
simple_vpn/static/js/: submitClosestForm.js
