[tool.poetry]
name = "simple_vpn"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
aiohttp = "^3.9.1"
djangorestframework = "^3.14.0"
django-allauth = "^0.60.1"
django-debug-toolbar = "^4.2.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
